# FEP

./: .gitignore  AI_SYSTEM_CLARIFICATION.md  BREAKTHROUGH_ANALYSIS.md  COMPREHENSIVE_PEER_REVIEW_RESPONSE.md  COMPREHENSIVE_TESTING_SUMMARY.md  HONEST_PROJECT_STATUS.md  LICENSE  LITERATURE_REVIEW_AND_CONTEXT.md  MANIFEST.in  MATHEMATICAL_FOUNDATIONS_AND_PROOFS.md  METHODOLOGICAL_CORRECTIONS_PROTOCOL.md  Makefile  PEER_REVIEW_CRITICAL_RESPONSE.md  PEER_REVIEW_IMPLEMENTATION_STATUS.md  PEER_REVIEW_RESPONSE_STATUS.md  PERFORMANCE_BENCHMARK_REPORT.md  PRIORITY_IMPLEMENTATION_SUCCESS.md  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  RESEARCH_INTEGRITY_ASSESSMENT.md  RIGOROUS_EXPERIMENTAL_FRAMEWORK.md  SCIENTIFIC_LIMITATIONS.md  SECURITY_FEATURES_CLARIFICATION.md  TECHNICAL_IMPLEMENTATION_GAPS.md  TRAINING_BREAKTHROUGH_ANALYSIS.md  benchmark_output.txt  comprehensive_low_level_tests.py  detailed_profile_20250828_025714.prof  fep_cognitive_architecture.py  interactive_demo.py  performance_benchmark_20250828_025714.json  performance_benchmark_suite.py  performance_profile_visualization.html  pyproject.toml  quick_benchmark.py  requirements-dev.txt  requirements.txt  resource_mindful_tests.py  setup.py  (+2 more)
data/: csc_training_dataset.json  csc_training_dataset_v2.json
docs/: AI_SYSTEM_CLARIFICATION.md  FEP_Framework_Documentation.md  HOW_TO_USE_THE_AI.md
experiments/: complete_fep_demonstration.py  data_curator.py  demo_benchmark_system.py  fep_mcm_benchmark_integration.py  generate_live_dataset.py  interactive_demo.py  live_vfe_web_demo.py  real_vs_mock_demonstration.py  smart_sensor_monitor.py
reports/: CALIBRATION_RESULTS_ANALYSIS.md  COMPREHENSIVE_TESTING_SUMMARY.md
src/: __init__.py  __version__.py  active_inference.py  calibrated_security_system.py  complexity_trainer.py  complexity_training_results_20250828_011012.json  complexity_training_results_20250828_024401.json  empirical_validation_framework.py  enhanced_fep_mcm_security.py  fep_control_comparison.py  fep_control_comparison_20250828_011340.json  fep_control_comparison_20250828_011422.json  fep_control_comparison_20250828_024456.json  fep_language_interface.py  fep_mathematics.py  fep_mcm_dual_agent.py  koopman_mcm_implementation.py  mock_code_cleanup.py  predictive_coding.py  real_benchmark_integration.py  real_fep_benchmark_results_20250828_002228.json  real_fep_benchmark_results_20250828_003614.json  real_fep_benchmark_results_20250828_003725.json  real_fep_benchmark_results_20250828_003805.json  real_fep_benchmark_system.py  real_fep_security_system.py  timescale_separated_fep.py
tests/: __init__.py  llm_style_edge_testing.py  resource_mindful_tests.py  test_benchmark_integration.py  test_enhanced_security.py  test_fep_architecture.py  test_fep_mathematics.py  test_json_fix.py
